application/static/css/search.css
.search-results {
    display: block;
    background-color: white;
    z-index: 99;
    position: relative;
    width: 250px;
}

.search input {
    width: 250px;
    line-height: 20px;
    height: 40px;
    padding: 5px;
    margin: 5px 10px;
    overflow: hidden;

}
/* Needed for overriding styling from react-bootstrap-table-all.min.css */
.react-bs-table{
    border: none;
    margin: 0;
    cursor: default;
}

.react-bs-container-body{
    cursor: pointer;
}

#searchButton{
    position:absolute;
    margin: 5px 10px;
}

